# fastapi

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  commands.md  docker-compose.yml  pyproject.toml
.github/workflows/: build_and_test.yml  bumpversion.yml  release.yml
api/: app.py
backup/: release.yml
tests/: test_app.py
