[tool.poetry]
name = "api"
version = "0.5.0"
description = ""
authors = ["fbrcode <fabio.bressler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-multipart = "^0.0.5"
sqlalchemy = "^1.4.46"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
commitizen = "^2.39.1"
pre-commit = "^2.21.0"

[tool.poetry.scripts]
api = 'api.app:start'

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.0"
version_files = [
    "api/__init__.py",
    "pyproject.toml:version"
]
tag_format = "v$version"
bump_message = "bump: $current_version → $new_version [skip-ci]"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
